<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:showDividers="middle">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/tblConfig" android:stretchColumns="0">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtConfig"
                android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/line_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbAddInstalled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:clickable="true" android:enabled="true"
                android:gravity="center_vertical" android:text="@string/txtAddInstalled">
            </CheckBox>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/line_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:id="@+id/groupMail"
                android:background="@drawable/custom_divider" android:showDividers="middle">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMailByClient"
                    android:id="@+id/radioMailAndroid"
                    android:checked="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMailByGmail"
                    android:id="@+id/radioMailGmail"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/line_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:background="@drawable/custom_divider"
                android:id="@+id/groupReport"
                android:showDividers="middle">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtReportNow"
                    android:id="@+id/radioReportNow"
                    android:checked="true" android:layout_marginRight="10dp" android:layout_marginLeft="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtReportDate"
                    android:id="@+id/radioReportDate" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtReportAll"
                    android:id="@+id/radioReportAll" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/line_horizontal"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSaveConfig"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtSaveConfig"
                android:paddingTop="10dp" android:paddingBottom="10dp"
                android:background="@drawable/button_shape" android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
            </Button>
        </TableRow>

    </TableLayout>
</LinearLayout>